--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="content">
             <div class="column col-left reveal">
                 <div class="img-card" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="200">
-                    <img src="Image/img1.jpg" alt="">
+                    <img src="img1.jpg" alt="">
                 </div>
             </div>
             <div class="column col-right reveal">
@@ -128,32 +128,32 @@
         <div class="content">
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work1.jpg" alt="">
+                    <img src="work1.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work2.jpg" alt="">
+                    <img src="work2.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                 <div class="card-img">
-                    <img src="Image/work3.jpg" alt="">
+                    <img src="work3.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work4.jpg" alt="">
+                    <img src="work4.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work5.jpg" alt="">
+                    <img src="work5.jpg" alt="">
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/work6.jpg" alt="">
+                    <img src="work6.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -236,13 +236,6 @@
         window.addEventListener("scroll", function(){
     scrollBtn.classList.toggle("active", window.scrollY > 500);
 });
-
-//javascript for scroll back to top on click scroll-to-top button
-
-// document.querySelector(".scrollToTop-btn").addEventListener("click", () => {
-//   document.body.scrollTop = 0;
-//   document.documentElement.scrollTop = 0;
-// });
 
         const menuBtn = document.querySelector(".menu-btn");
         const navigation = document.querySelector(".navigation");
